networkpolicies/np_public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: public-only
  namespace: public
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
